--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hello! I'm [S.Narendar kumar], a passionate web developer with experience in HTML, CSS, JavaScript, and more. I love creating clean and functional web applications.</p>
+            <p>Hello! I'm S.Narendar kumar, a passionate web developer with experience in HTML, CSS, JavaScript, and more. I love creating clean and functional web applications,passionate about blockchain and web3.</p>
         </div>
     </section>
 
@@ -49,7 +49,7 @@
             <div class="project">
                 <h3>Project 1: Portfolio Website</h3>
                 <p>A personal portfolio website to showcase my work and skills.</p>
-                <a href="https://github.com/yourusername/portfolio" target="_blank">View on GitHub</a>
+                <a href="https://github.com/narendar009/portfolio" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
                 <h3>Project 2: E-Commerce Site</h3>
